use codecov.io for calculation coverage

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,13 @@ perl:
   - "5.20"
   - "5.22"
 
+before_script:
+  - cpanm --quiet --notest --skip-satisfied Devel::Cover Devel::Cover::Report::Codecov
+
+script:
+  - perl Build.PL
+  - ./Build build
+  - cover -test
+
+after_success:
+  - cover -report codecov
